--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width>
+    <meta keywords="">
+  <title>Receitas da Josi</title>
+  <link rel:="styleheet" href="style.css/>
+</head>
+<body>
+    
